Link bug squashed

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5,10 +5,18 @@
 	height: 100vh;
 	width: 100%;
 	margin: 0;
-	padding: 0;
-	
+	padding: 0 5rem;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: flex-start;
+	align-items: center;
+
 	@include themify() {
 		background-color: themed($bg);
 		color: themed($text);
+	}
+
+	@include mediumScreen() {
+		padding: 0;
 	}
 }
