--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -19,29 +19,47 @@
 	justify-self: flex-start;
 	cursor: pointer;
 
-	@media screen and (max-width: 768px) {
+	@include mediumScreen() {
 		width: 4rem;
 		height: 1.5rem;
 		margin: 0;
 	}
 }
 
-.itemsContainer {
-	width: 50%;
+.navItemsContainer {
+	width: 40rem;
 	height: 100%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
+}
+
+.linkItem {
+	align-items: center;
+	text-decoration: none;
+	padding: 0 rem;
+	cursor: pointer;
+
+	&:hover {
+		@include themify() {
+			border: 3px solid themed($border);
+			color: red;
+			margin: 100px;
+		}
+	}
+
+	&.active {
+		@include themify() {
+			transition: all 0.1s;
+			border-bottom: 3px solid themed($border);
+		}
+	}
 }
 
 .mobileIcon {
 	display: none;
 	@media screen and (max-width: 768px) {
-		display: block;
-		position: absolute;
-		top: 0;
-		right: 0;
-		transform: translate(-100%, 60%);
+		display: flex;
 		font-size: 1.8rem;
 		cursor: pointer;
 		@include themify() {
@@ -58,14 +76,12 @@
 	display: inline-flex;
 	align-items: center;
 	height: 2rem;
-	margin-right: auto;
 }
 
 .searchButton {
 	width: 15%;
 	height: 100%;
 	margin-left: auto;
-
 }
 
 .search {
