--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -52,3 +52,9 @@ $themes: (
 @function themed($key) {
 	@return map-get($theme-map, $key);
 }
+
+@mixin mediumScreen() {
+	@media screen and (max-width: 768px) {
+		@content;
+	}
+}
